--- a/Code/Untitled.ipynb
+++ b/Code/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -17,6 +17,14 @@
     "import imageio\n",
     "imageio.plugins.ffmpeg.download()\n",
     "from moviepy.editor import *\n",
+    "import smtplib\n",
+    "from email.mime.text import MIMEText\n",
+    "from email.mime.image import MIMEImage\n",
+    "from email.mime.multipart import MIMEMultipart\n",
+    "import datetime\n",
+    "from email.mime.base import MIMEBase\n",
+    "import email.encoders as Encoders\n",
+    "\n",
     "\n",
     "def files():\n",
     "    files = [content['path'].split('/')[-1]\n",
@@ -94,44 +102,60 @@
     "    \n",
     "    return\n",
     "        \n",
-    "def SendMail4():\n",
-    "    send = {}\n",
+    "def send_mail():\n",
+    "    send = []\n",
     "    for i in clients.index:\n",
     "        for j in next(os.walk('.'))[1]:\n",
     "            if clients.Nombre.loc[i] in j:\n",
-    "                send[clients.Email.loc[i]] = j\n",
-    "    for i in send.keys():\n",
-    "    msg = MIMEMultipart()\n",
-    "    msg['Subject'] = 'prueba'\n",
-    "    msg['From'] = 'fapb88ve@gmail.com'\n",
-    "    msg['To'] = 'fapb88ve@gmail.com'\n",
-    "    text = MIMEText(\"test\")\n",
-    "    msg.attach(text)\n",
-    "    for i in files:\n",
-    "        if 'mp4' in i:\n",
-    "            part = MIMEBase('application', \"octet-stream\")\n",
-    "            fo=open('ADRIANA GRAELL WK27_0013.mpg',\"rb\")\n",
-    "            part.set_payload(fo.read() )\n",
-    "            Encoders.encode_base64(part)\n",
-    "            part.add_header('Content-Disposition', 'attachment; filename=\"%s\"' % os.path.basename('ADRIANA GRAELL WK27_0013.mpg'))\n",
-    "            msg.attach(part)\n",
-    "        if 'jpg' in i:\n",
-    "            img_data = open(k, 'rb').read()\n",
-    "            image = MIMEImage(img_data, name=os.path.basename(k))\n",
-    "            msg.attach(image)\n",
-    "    s = smtplib.SMTP('smtp.gmail.com', 587)\n",
-    "    s.ehlo()\n",
-    "    s.starttls()\n",
-    "    s.login('fapb88ve@gmail.com', 'rabbitrun88ve')\n",
-    "    s.sendmail('fapb88ve@gmail.com', 'fapb88ve@gmail.com', msg.as_string())\n",
-    "    s.quit()\n",
+    "                c_name = clients.Nombre.loc[i]\n",
+    "                c_email = clients.Email.loc[i]\n",
+    "                folder = j\n",
+    "                msg = MIMEMultipart()\n",
+    "                msg['Subject'] = 'Ultrasound Imagery'\n",
+    "                msg['From'] = 'fapb88ve@gmail.com'\n",
+    "                msg['To'] = c_email\n",
+    "                txt = \"\"\"Hello {}! \n",
+    "                \\nThese are the pictures from your session.\n",
+    "                \\nShare your experience and enjoy a 15% discount on your next visit. \n",
+    "                \\nClick here to reedem: https://goo.gl/rC3z9H\n",
+    "            \n",
+    "                \\nWish you all the best! Come back soon :)\n",
+    " \n",
+    "                \\nThanks\n",
+    "                \\nPancita’s Team\n",
+    "                \\nwww.pancitas.com\n",
+    "                \\n(305) 542-9931\"\"\"\n",
+    "                text = MIMEText(txt.format(c_name))\n",
+    "                \n",
+    "                msg.attach(text)\n",
+    "                os.chdir('.\\\\'+folder)\n",
+    "                files = os.listdir(os.getcwd())\n",
+    "                for l in files:\n",
+    "                    if 'mp4' in l:\n",
+    "                        part = MIMEBase('application', \"octet-stream\")\n",
+    "                        fo=open(l,\"rb\")\n",
+    "                        part.set_payload(fo.read() )\n",
+    "                        Encoders.encode_base64(part)\n",
+    "                        part.add_header('Content-Disposition', 'attachment; filename=\"%s\"' % os.path.basename(l))\n",
+    "                        msg.attach(part)\n",
+    "                    if 'jpg' in l:\n",
+    "                        img_data = open(l, 'rb').read()\n",
+    "                        image = MIMEImage(img_data, name=os.path.basename(l))\n",
+    "                        msg.attach(image)\n",
+    "                s = smtplib.SMTP('smtp.gmail.com', 587)\n",
+    "                s.ehlo()\n",
+    "                s.starttls()\n",
+    "                s.login('fapb88ve@gmail.com', 'rabbitrun88ve')\n",
+    "                s.sendmail('fapb88ve@gmail.com', c_email, msg.as_string())\n",
+    "                s.quit()\n",
+    "                os.chdir('..')\n",
     "\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -166,9 +190,10 @@
     "    send_f = pd.merge(d_files, clients, left_on='c_name', right_on='Nombre',\n",
     "                      how='inner')\n",
     "    dl_files(send_f)\n",
-    "    \n",
+    "    send_mail()\n",
     "\n",
-    "\n",
+    "if os.getcwd() != 'C:\\\\Users\\\\Frank Pinto\\\\desktop\\\\pds\\\\Pancitas\\\\Code':\n",
+    "    os.chdir('C:\\\\Users\\\\Frank Pinto\\\\desktop\\\\pds\\\\Pancitas\\\\Code')\n",
     "full()\n",
     "print(os.getcwd())\n",
     "#os.chdir('..')"
@@ -183,21 +208,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-00b87d9bd098>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0msend\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msend\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -205,14 +244,29 @@
     "    os.chdir('C:\\\\Users\\\\Frank Pinto\\\\desktop\\\\pds\\\\Pancitas\\\\Code')\n",
     "clients = pd.read_excel('Registro de Clientes.xlsx')\n",
     "\n",
-    "send = {}\n",
+    "send = pd.DataFrame()\n",
     "os.chdir('.\\\\Clients')\n",
     "for i in clients.index:\n",
     "    for j in next(os.walk('.'))[1]:\n",
     "        if clients.Nombre.loc[i] in j:\n",
-    "            send[clients.Email.loc[i]] = j\n",
+    "            send.append({'email':clients.Email.loc[i], 'directory':j}, ignore_index=True)\n",
+    "            #send.append([clients.Email.loc[i], j])\n",
+    "            \n",
+    "                                \n",
     "send\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "if os.getcwd() != \n",
+    "os.chdir('.\\\\Pancitas Ultrasound Aba Duenas')"
    ]
   }
  ],
