--- a/Code/Untitled.ipynb
+++ b/Code/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -46,18 +46,18 @@
     "\n",
     "def watermark(x):\n",
     "    for i in x:\n",
-    "        if 'AVI' in i:\n",
+    "        if 'AVI' or 'MPG' in i:\n",
     "            clip = VideoFileClip(i)\n",
-    "            logo = (logo.set_duration(clip.duration)\n",
-    "                    .resize(height=80)\n",
-    "                    .margin(right=8, top=8, opacity=0)  # (optional) logo-border padding\n",
-    "                    .set_pos((\"right\", \"bottom\")))\n",
+    "            #logo = (logo.set_duration(clip.duration)\n",
+    "             #       .resize(height=80)\n",
+    "              #      .margin(right=8, top=8, opacity=0)  # (optional) logo-border padding\n",
+    "               #     .set_pos((\"right\", \"bottom\")))\n",
     "            # logo = (ImageClip(\"pancita4.png\")\n",
     "            #.set_duration(clip.duration)\n",
     "           #   .resize(height=80)\n",
     "            #  .margin(right=8, top=8, opacity=0) # (optional) logo-border padding\n",
     "            # .set_pos((\"right\",\"bottom\")))\n",
-    "            final = CompositeVideoClip([clip, logo])\n",
+    "            #final = CompositeVideoClip([clip, logo])\n",
     "            final.write_videofile(\"Pancitas \" + i + \".mp4\")\n",
     "        if 'JPG' in i:\n",
     "            #plogo = Image.open(\"pancita4.png\")\n",
@@ -148,23 +148,28 @@
     "                s.login('fapb88ve@gmail.com', 'rabbitrun88ve')\n",
     "                s.sendmail('fapb88ve@gmail.com', c_email, msg.as_string())\n",
     "                s.quit()\n",
-    "                os.chdir('..')\n",
-    "\n",
-    "    \n"
+    "                os.chdir('..')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Frank Pinto\\desktop\\pds\\Pancitas\\Code\\Clients\n"
+     "ename": "NameError",
+     "evalue": "name 'final' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-cca2dd496352>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m'C:\\\\Users\\\\Frank Pinto\\\\desktop\\\\pds\\\\Pancitas\\\\Code'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'C:\\\\Users\\\\Frank Pinto\\\\desktop\\\\pds\\\\Pancitas\\\\Code'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0mfull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[1;31m#os.chdir('..')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-cca2dd496352>\u001b[0m in \u001b[0;36mfull\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m     send_f = pd.merge(d_files, clients, left_on='c_name', right_on='Nombre',\n\u001b[1;32m     20\u001b[0m                       how='inner')\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0mdl_files\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msend_f\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m     \u001b[0msend_mail\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1-b8cbd3a60ab7>\u001b[0m in \u001b[0;36mdl_files\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     83\u001b[0m             \u001b[0mout\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m             \u001b[0mout\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m         \u001b[0mwatermark\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdl_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;34m'Pancitas'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1-b8cbd3a60ab7>\u001b[0m in \u001b[0;36mwatermark\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     49\u001b[0m             \u001b[1;31m# .set_pos((\"right\",\"bottom\")))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m             \u001b[1;31m#final = CompositeVideoClip([clip, logo])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m             \u001b[0mfinal\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite_videofile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Pancitas \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\".mp4\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;34m'JPG'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m             \u001b[1;31m#plogo = Image.open(\"pancita4.png\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'final' is not defined"
      ]
     }
    ],
@@ -259,14 +264,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Frank Pinto\\\\desktop\\\\pds\\\\Pancitas\\\\Code'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "if os.getcwd() != \n",
-    "os.chdir('.\\\\Pancitas Ultrasound Aba Duenas')"
+    "os.getcwd()"
    ]
   }
  ],
